@@ -20,6 +20,7 @@ examples/create_and_print_value_monolingual.pl
 examples/create_and_print_value_property.pl
 examples/create_and_print_value_quantity.pl
 examples/create_and_print_value_quantity_translated.pl
+examples/create_and_print_value_sense.pl
 examples/create_and_print_value_string.pl
 examples/create_and_print_value_time.pl
 examples/create_and_print_value_time_translated.pl
@@ -59,6 +60,7 @@ Print/Value/Item.pm
 Print/Value/Monolingual.pm
 Print/Value/Property.pm
 Print/Value/Quantity.pm
+Print/Value/Sense.pm
 Print/Value/String.pm
 Print/Value/Time.pm
 README
@@ -126,6 +128,8 @@ t/Wikibase-Datatype-Print-Value-Property/03-print.t
 t/Wikibase-Datatype-Print-Value-Quantity/01-use.t
 t/Wikibase-Datatype-Print-Value-Quantity/02-version.t
 t/Wikibase-Datatype-Print-Value-Quantity/03-print.t
+t/Wikibase-Datatype-Print-Value-Sense/01-use.t
+t/Wikibase-Datatype-Print-Value-Sense/02-version.t
 t/Wikibase-Datatype-Print-Value-String/01-use.t
 t/Wikibase-Datatype-Print-Value-String/02-version.t
 t/Wikibase-Datatype-Print-Value-String/03-print.t
@@ -173,6 +177,8 @@ xt/Wikibase-Datatype-Print-Value-Property/01-pod_coverage.t
 xt/Wikibase-Datatype-Print-Value-Property/02-pod.t
 xt/Wikibase-Datatype-Print-Value-Quantity/01-pod_coverage.t
 xt/Wikibase-Datatype-Print-Value-Quantity/02-pod.t
+xt/Wikibase-Datatype-Print-Value-Sense/01-pod_coverage.t
+xt/Wikibase-Datatype-Print-Value-Sense/02-pod.t
 xt/Wikibase-Datatype-Print-Value-String/01-pod_coverage.t
 xt/Wikibase-Datatype-Print-Value-String/02-pod.t
 xt/Wikibase-Datatype-Print-Value-Time/01-pod_coverage.t
